classDiagram
    direction TB
    class Entity {
        #repository : Repository
        -errors : array
        #post_type : string|false
        #capability_type : string|false
        +WP_Post : WP_Post
        -validated : bool
        +cap : object
        +__construct(which)
        +get_repository()
        +get_date_i18n(date)
        +get_mapped_property(prop)
        #set_mapped_property(prop, value)
        +set(prop, value)
        +get(prop)
        +set_status(value)
        +validate()
        +validate_prop(prop)
        +get_errors()
        +$get_post_type()
        +$get_capability_type()
        +get_status()
        +get_db_identifier()
        +get_id()
        +add_error(type, message)
        +reset_errors()
        +get_validated()
        #set_validated(value)
        #set_as_valid()
        +_toArray()
        +_toJson()
        +can_read(user)
        +can_edit(user)
        +can_delete(user)
        +can_publish(user)
        +get_capabilities()
        +diff(which)
    }
    class Item_Metadata_Entity {
        #post_type : mixed
        #repository : string
        #item : mixed
        +__construct(item, metadatum, meta_id, parent_meta_id)
        +get_multivalue_prefix()
        +get_multivalue_suffix()
        +get_multivalue_separator()
        +get_value_as_html()
        +get_value_as_string()
        +get_value_as_array()
        +_toArray(formatted_values, cascade)
        +set_item(item)
        +set_value(value)
        +set_metadatum(metadatum)
        +set_meta_id(meta_id)
        +set_parent_meta_id(parent_meta_id)
        +get_item()
        +get_metadatum()
        +get_meta_id()
        +get_parent_meta_id()
        +get_value()
        +has_value()
        +is_multiple()
        +is_collection_key()
        +is_required()
        +validate()
    }
    Entity ..> Entity
    Entity <|-- Item_Metadata_Entity
    Item_Metadata_Entity ..> Item_Metadata_Entity
